# UniShield

./: .env.example  .gitignore  README.md  docker-compose.infra.yml  docker-compose.openclaw-fix.yml  docker-compose.orchestrator.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: unishield-fp-filter.txt  unishield-scan-instructions.txt
.github/workflows/: ci.yml  deploy.yml  security-scan.yml  unishield-security.yml
.openclaw-docker/: openclaw.json
agents/: compliance_agent  dark_web_agent  forensics_agent  graph_query_agent  incident_response_agent  insider_threat_agent  network_security_agent  registry.py  reporting_agent  siem_analysis_agent  source_code_agent  threat_intel_agent  vulnerability_agent  worker.py
agents/_openclaw/: __init__.py  base.py  structured.py  tools.py
agents/compliance-agent/: __init__.py  agent.py
agents/dark-web-agent/: __init__.py  agent.py
agents/forensics-agent/: __init__.py  agent.py
agents/graph-query-agent/: __init__.py  agent.py
agents/incident-response-agent/: __init__.py  agent.py
agents/orchestrator/: __init__.py  (+2 more)
alembic/: env.py
backend/: Dockerfile
config/: openclaw-gateway.json
core/: __init__.py  api_keys.py  auth.py  config.py  constants.py  database.py  integrations.py  models.py  secrets.py  seed.py
docs/: PRODUCTION.md  STRUCTURE.md  openclaw-gateway-setup.md
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
gateway/: Dockerfile  dependencies.py  main.py  orchestrator_client.py
infra/: k3d-config.yml
openclaw_sdk/: __init__.py  client.py  gateway.py
scripts/: check-api.sh  check-openclaw.sh  dev-local.sh  doctor.sh  embed-corpus.sh  embed_corpus.py  fix-login.sh  fix-openclaw-config.sh  generate-agent-stubs.py  generate-connectors.py  generate-full-agents.py  infra-up.sh  install-scr-tools.sh  migrate-kg.sh  migrate-timescale.sh  migrate-timescale.sql  run-agent-workers.sh  run-live.sh  run-orchestrator.sh  run-scr-worker.sh  run-unishield-live.sh  run-unishield-orchestrator.sh  run-unishield-scr-worker.sh  seed-local.sh  setup-openclaw-agents.sh  unishield-doctor.sh  unishield-infra-up.sh  vault-init.sh  week1-docker-stack.sh
services/: connector_registry  hitl_service  reporting_service  vector_store
tests/: conftest.py  test_action_executor.py  test_action_gate.py  test_ast_extractor.py  test_attack_path.py  test_demo_scan.py  test_findings_filter.py  test_live_runners.py  test_orchestrator.py  test_repo_acquisition.py  test_repo_registry.py  test_repo_scan_workflow.py  test_scr_full_pipeline.py  test_scr_pipeline_fixes.py  test_scr_progress.py  test_scr_runner.py  test_shared_memory.py  test_trigger_handler.py
unishield/: Dockerfile  __init__.py  docker-compose.infra.yml  docker-compose.yml  requirements.txt
(+472 files in other folders)
